--- a/src/main/resources/templates/pautasList.html
+++ b/src/main/resources/templates/pautasList.html
@@ -1,7 +1,7 @@
 <div class="row">
   {#if role == 'ADMIN'}<a class="btn btn-primary btn-sm" href="/pautas/new" role="button" up-modal=".modalenabled">Adicionar</a>{/if}
   <div class="search-right">
-    <form action="/pautas" method="GET" name="search" up-target=".container">
+    <form method="GET" name="search" id="search">
        <input type="text" name="filter" class="form-control" id="filter" placeholder="Localizar por Titulo" {#if filtered}value="{filter}"{/if}>
        <button class="btn btn-primary" type="submit">Ok</button>
     </form>
