--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,6 +36,7 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
+    window.history.pushState("", "", "/auth");
     $("form").submit(function(event){
         var data = {
             username: $("#username").val(),
