--- a/src/main/resources/templates/pautaForm.html
+++ b/src/main/resources/templates/pautaForm.html
@@ -4,7 +4,7 @@
 <div class="modalenabled">
   <h2>{#if update}Editar Pauta #{pauta.id}{#else}Adicionar Pauta{/if}</h2>
   <div class="panel panel-default">
-    <form action="/pautas/{#if update}edit/{pauta.id}{#else}new{/if}" method="POST" name="pautaForm" up-target=".container" enctype="multipart/form-data">
+    <form action="/pautas/{#if update}edit/{pauta.id}{#else}new{/if}" method="POST" name="pautaForm" onsubmit="reload()" enctype="multipart/form-data">
       <div class="form-panel">
         <div class="form-group">
             <label class="sr-only" for="titulo">Titulo</label>
@@ -22,7 +22,7 @@
 	          {/for}
 	        </select>
         </div>
-        <button type="submit" class="btn btn-primary" onClick="location.href='/pautas'">{#if update}Editar{#else}Adicionar{/if}</button>
+        <button type="submit" class="btn btn-primary">{#if update}Editar{#else}Adicionar{/if}</button>
       </div>
     </form>
   </div>
