--- a/src/main/resources/templates/baseLogin.html
+++ b/src/main/resources/templates/baseLogin.html
@@ -3,6 +3,8 @@
   <head>
     <!-- Required meta tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="pragma" content="no-cache">
     
     <!-- CSS -->
     <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css" />
