--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,6 +47,7 @@ $(document).ready(function() {
             url: location.href+"/logar",
             data: JSON.stringify(data),
             type: "POST",
+            cache: false,
             contentType: "application/json",
             success: function(result) { 
                 if(!result) {
@@ -61,6 +62,7 @@ $(document).ready(function() {
                 $.ajax({
                     url: "/",
                     type: "GET",
+                    cache: false,
                     contentType: "application/json",
                     headers: {
                         "Authorization": "Bearer "+result.token
