--- a/src/main/resources/templates/sessaoForm.html
+++ b/src/main/resources/templates/sessaoForm.html
@@ -4,7 +4,7 @@
 <div class="modalenabled">
   <h2>{#if update}Editar Sessão #{sessao.id}{#else}Adicionar Sessão{/if}</h2>
   <div class="panel panel-default">
-    <form action="/sessoes/{#if update}edit/{sessao.id}{#else}new{/if}" method="POST" name="sessaoForm" up-target=".container" enctype="multipart/form-data">
+    <form action="/sessoes/{#if update}edit/{sessao.id}{#else}new{/if}" method="POST" name="sessaoForm" onsubmit="reload()" enctype="multipart/form-data">
       <div class="form-panel">
         <div class="form-group">
             <label class="sr-only" for="nome">Nome</label>
@@ -38,7 +38,7 @@
 	          {/for}
 	        </select>
         </div>
-        <button type="submit" class="btn btn-primary" onClick="location.href='/sessoes'">{#if update}Editar{#else}Adicionar{/if}</button>
+        <button type="submit" class="btn btn-primary">{#if update}Editar{#else}Adicionar{/if}</button>
       </div>
     </form>
   </div>
