Realizado ajuste na excessão de página não encontrada e adicionado o favicon

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -104,7 +104,7 @@ $(document).ready(function() {
 					$("#content").text("Erro ao carregar ou você não possui autorização para visualizar.");
 				}
 			});
-		} else {
+		} else if(filter != null) {
 			$.ajax({
 				url: location.pathname+"/content",
 				type: "GET",
