Alterado o tipo dos campos Data da Sessão para LocalDate

--- a/src/main/resources/templates/sessaoForm.html
+++ b/src/main/resources/templates/sessaoForm.html
@@ -11,7 +11,7 @@
             <input type="text" name="nome" class="form-control" id="nome" placeholder="Nome da Sessão" required autofocus {#if update}value="{sessao.nome}"{/if}>
         </div>
         <div class="form-group">
-            <label class="sr-only" for="duracao">DuraÃ§Ã£o</label>
+            <label class="sr-only" for="duracao">Duração</label>
             <input type="number" name="duracao" class="form-control" id="duracao" placeholder="Duração em Minutos" required autofocus {#if update}value="{sessao.duracao}"{/if}>
         </div>
         <div class="form-group">
