Adicionado a comparação de datas da sessão para votação da pauta

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -78,69 +78,78 @@
 	<div class="container-fluid">
       {#insert contents}{/}
     </div>
-</body>
 
-<script type="text/javascript">
-$(document).ready(function() {
-	if(localStorage.getItem("token") != null) {
-		$(".username").text(localStorage.getItem("username"));
-		const queryString = location.search;
-		const urlParams = new URLSearchParams(queryString);
-		var filter = urlParams.get("filter");
+	<script type="text/javascript">
+	$(document).ready(function() {
+		if(localStorage.getItem("token") != null) {
+			$(".username").text(localStorage.getItem("username"));
+			const queryString = location.search;
+			const urlParams = new URLSearchParams(queryString);
+			var filter = urlParams.get("filter");
 
-		if(location.pathname != "/" && filter == null) {
-			$.ajax({
-				url: location.pathname+"/content",
-				type: "GET",
-				cache: false,
-				contentType: "application/json",
-				headers: {
-					"Authorization": "Bearer "+localStorage.getItem("token")
-				},
-				success: function(result) { 
-					$("#content").html(result);
-				},
-				error: function() { 
-					$("#content").text("Erro ao carregar ou você não possui autorização para visualizar.");
-				}
-			});
-		} else if(filter != null) {
-			$.ajax({
-				url: location.pathname+"/content",
-				type: "GET",
-				data: "filter="+filter,
-				cache: false,
-				contentType: "application/json",
-				headers: {
-					"Authorization": "Bearer "+localStorage.getItem("token")
-				},
-				success: function(result) { 
-					$("#content").html(result);
-				},
-				error: function() { 
-					$("#content").text("Erro ao carregar ou você não possui autorização para visualizar.");
-				}
-			});
+			if(location.pathname != "/" && filter == null) {
+				$.ajax({
+					url: location.pathname+"/content",
+					type: "GET",
+					cache: false,
+					contentType: "application/json",
+					headers: {
+						"Authorization": "Bearer "+localStorage.getItem("token")
+					},
+					success: function(result) { 
+						$("#content").html(result);
+						dateFormat();
+					},
+					error: function() { 
+						$("#content").text("Erro ao carregar ou você não possui autorização para visualizar.");
+					}
+				});
+			} else if(filter != null) {
+				$.ajax({
+					url: location.pathname+"/content",
+					type: "GET",
+					data: "filter="+filter,
+					cache: false,
+					contentType: "application/json",
+					headers: {
+						"Authorization": "Bearer "+localStorage.getItem("token")
+					},
+					success: function(result) { 
+						$("#content").html(result);
+						dateFormat();
+					},
+					error: function() { 
+						$("#content").text("Erro ao carregar ou você não possui autorização para visualizar.");
+					}
+				});
+			}
+		} else {
+			$("#content").html("Você não possui autorização para visualizar.");
 		}
-	} else {
-      $("#content").html("Você não possui autorização para visualizar.");
-    }
-});
+	});
 
-function reload() {
-	var url = location.href;
-	var page = url.replace("/new", "");
+	function reload() {
+		var url = location.href;
+		var page = url.replace("/new", "");
 
-	setTimeout(function(){
-		location.replace(page);
-	}, 2000);
-}
+		setTimeout(function(){
+			location.replace(page);
+		}, 2000);
+	}
 
-function sair() {
-	localStorage.removeItem("token");
-	localStorage.removeItem("username");
-	localStorage.removeItem("cpf");
-	location.reload("/auth");
-}
-</script>
+	function sair() {
+		localStorage.removeItem("token");
+		localStorage.removeItem("username");
+		localStorage.removeItem("cpf");
+		location.reload("/auth");
+	}
+
+	function dateFormat() {
+		$(".date").each(function() {
+			var value = new Date($(this).text()).toLocaleDateString('pt-br');
+			$(this).text(value);
+		});
+	}
+	</script>
+</body>
 </html>
