--- a/src/main/resources/templates/pautasList.html
+++ b/src/main/resources/templates/pautasList.html
@@ -42,7 +42,7 @@
     <td>
       {pauta.status.descricao}
     </td>
-    <td>
+    <td class="date">
       {pauta.dtCreated}
     </td>
     <td class="fit">
