--- a/src/main/resources/templates/sessoesList.html
+++ b/src/main/resources/templates/sessoesList.html
@@ -36,10 +36,10 @@
     <td>
       {sessao.idpauta}
     </td>
-    <td>
+    <td class="date">
       {sessao.dataInicioSessao}
     </td>
-    <td>
+    <td class="date">
       {sessao.dataFimSessao}
     </td>
     <td>
