Adicionado a lib Lobibox para notificações e modal

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -8,13 +8,13 @@
     
     <!-- CSS -->
     <link type="text/css" rel="stylesheet" href="/assets/css/bootstrap.min.css" />
-    <link type="text/css" rel="stylesheet" href="/assets/css/unpoly.min.css" />
+    <link type="text/css" rel="stylesheet" href="/assets/css/lobibox.css" />
     <link type="text/css" rel="stylesheet" href="/assets/css/style.css" />
     
     <!-- JS -->
     <script type="text/javascript" src="/assets/js/jquery.min.js"></script>
     <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/assets/js/unpoly.min.js"></script>
+    <script type="text/javascript" src="/assets/js/lobibox.js"></script>
 
 	<script type="text/javascript">
 		window.onload = verifyToken();
@@ -67,7 +67,7 @@
 	
 							<ul class="dropdown-menu" role="menu">
 								<li><a href="/users/perfil">Perfil</a></li>
-								<li><a href="#" onClick="sair()">Sair</a></li>
+								<li><a href="#" onClick="logoff()">Sair</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -79,77 +79,6 @@
       {#insert contents}{/}
     </div>
 
-	<script type="text/javascript">
-	$(document).ready(function() {
-		if(localStorage.getItem("token") != null) {
-			$(".username").text(localStorage.getItem("username"));
-			const queryString = location.search;
-			const urlParams = new URLSearchParams(queryString);
-			var filter = urlParams.get("filter");
-
-			if(location.pathname != "/" && filter == null) {
-				$.ajax({
-					url: location.pathname+"/content",
-					type: "GET",
-					cache: false,
-					contentType: "application/json",
-					headers: {
-						"Authorization": "Bearer "+localStorage.getItem("token")
-					},
-					success: function(result) { 
-						$("#content").html(result);
-						dateFormat();
-					},
-					error: function() { 
-						$("#content").text("Erro ao carregar ou você não possui autorização para visualizar.");
-					}
-				});
-			} else if(filter != null) {
-				$.ajax({
-					url: location.pathname+"/content",
-					type: "GET",
-					data: "filter="+filter,
-					cache: false,
-					contentType: "application/json",
-					headers: {
-						"Authorization": "Bearer "+localStorage.getItem("token")
-					},
-					success: function(result) { 
-						$("#content").html(result);
-						dateFormat();
-					},
-					error: function() { 
-						$("#content").text("Erro ao carregar ou você não possui autorização para visualizar.");
-					}
-				});
-			}
-		} else {
-			$("#content").html("Você não possui autorização para visualizar.");
-		}
-	});
-
-	function reload() {
-		var url = location.href;
-		var page = url.replace("/new", "");
-
-		setTimeout(function(){
-			location.replace(page);
-		}, 2000);
-	}
-
-	function sair() {
-		localStorage.removeItem("token");
-		localStorage.removeItem("username");
-		localStorage.removeItem("cpf");
-		location.reload("/auth");
-	}
-
-	function dateFormat() {
-		$(".date").each(function() {
-			var value = new Date($(this).text()).toLocaleDateString('pt-br');
-			$(this).text(value);
-		});
-	}
-	</script>
+	<script type="text/javascript" src="/assets/js/scripts.js"></script>
 </body>
 </html>
