--- a/src/main/resources/templates/perfilForm.html
+++ b/src/main/resources/templates/perfilForm.html
@@ -1,6 +1,5 @@
-{@app.model.User user}
 <div class="panel panel-default">
-  <form action="/users/perfil/edit" method="POST" name="perfilForm" up-target=".container" enctype="multipart/form-data">
+  <form action="/users/perfil/edit" method="POST" name="perfilForm" id="perfilForm" enctype="multipart/form-data">
     <div class="form-panel">
       <div class="form-group">
           <label class="sr-only" for="name">Nome</label>
