--- a/src/main/resources/templates/sessaoForm.html
+++ b/src/main/resources/templates/sessaoForm.html
@@ -1,33 +1,34 @@
-{@app.model.Sessao sessao}
-{#include base.html} 
-{#contents}
-<div class="modalenabled">
-  <h2>{#if update}Editar Sessão #{sessao.id}{#else}Adicionar Sessão{/if}</h2>
+<div class="panel">
+  <h3>{#if update}Editar Sessão #{sessao.id}{#else}Adicionar Sessão{/if}</h3>
+  {#if error}<div class="alert alert-danger">{error}</div>{/if}
+  <div id="msg"></div>
   <div class="panel panel-default">
-    <form action="/sessoes/{#if update}edit/{sessao.id}{#else}new{/if}" method="POST" name="sessaoForm" onsubmit="reload()" enctype="multipart/form-data">
+    <form method="POST" name="sessaoForm" id="sessaoForm" enctype="multipart/form-data">
       <div class="form-panel">
         <div class="form-group">
             <label class="sr-only" for="nome">Nome</label>
-            <input type="text" name="nome" class="form-control" id="nome" placeholder="Nome da Sessão" required autofocus {#if update}value="{sessao.nome}"{/if}>
+            <input type="text" name="nome" class="form-control" id="nome" placeholder="Nome da Sessão" required="true" autofocus {#if update}value="{sessao.nome}"{/if}>
         </div>
         <div class="form-group">
             <label class="sr-only" for="duracao">Duração</label>
-            <input type="number" name="duracao" class="form-control" id="duracao" placeholder="Duração em Minutos" required autofocus {#if update}value="{sessao.duracao}"{/if}>
+            <input type="number" name="duracao" class="form-control" id="duracao" placeholder="Duração em Minutos" required="true" autofocus {#if update}value="{sessao.duracao}"{/if}>
         </div>
         <div class="form-group">
             <label class="sr-only" for="data_inicio_sessao">Data Inicio</label>
-            <input type="date" name="data_inicio_sessao" class="form-control" id="data_inicio_sessao" placeholder="Data Inicio" required autofocus {#if update}value="{sessao.dataInicioSessao}"{/if}>
+            <input type="date" name="data_inicio_sessao" class="form-control" id="data_inicio_sessao" placeholder="Data Inicio" required="true" autofocus {#if update}value="{sessao.dataInicioSessao}"{/if}>
         </div>
         <div class="form-group">
             <label class="sr-only" for="data_fim_sessao">Data Fim</label>
-            <input type="date" name="data_fim_sessao" class="form-control" id="data_fim_sessao" placeholder="Data Fim" required autofocus {#if update}value="{sessao.dataFimSessao}"{/if}>
+            <input type="date" name="data_fim_sessao" class="form-control" id="data_fim_sessao" placeholder="Data Fim" required="true" autofocus {#if update}value="{sessao.dataFimSessao}"{/if}>
         </div>
         <div class="form-group">
 	        <select class="custom-select" name="idpauta" id="idpauta" {#if update}disabled{/if}>
-	          <option disabled value="">Pautas</option>
-	          {#for pt in pautas}
-	          <option value="{pt.id}" {#if sessao.idpauta == pt.id}selected{/if}>{pt.titulo}</option>
-	          {/for}
+            <option disabled value="">Pautas</option>
+            {#if pautas}
+              {#for pt in pautas}
+              <option value="{pt.id}" {#if sessao.idpauta == pt.id}selected{/if}>{pt.titulo}</option>
+              {/for}
+            {/if}
 	        </select>
         </div>
         <div class="form-group">
@@ -38,10 +39,7 @@
 	          {/for}
 	        </select>
         </div>
-        <button type="submit" class="btn btn-primary">{#if update}Editar{#else}Adicionar{/if}</button>
       </div>
     </form>
   </div>
 </div>
-{/contents}
-{/include}
