--- a/src/main/resources/META-INF/resources/assets/css/style.css
+++ b/src/main/resources/META-INF/resources/assets/css/style.css
@@ -21,6 +21,8 @@ h2, .h2 {
     padding-bottom: 20px !important;
 }
 h3, .h3 {
+    margin-top: 10px !important;
+    padding-bottom: 10px !important;
     font-size: 24px;
 }
 
