--- a/src/main/resources/templates/pautasList.html
+++ b/src/main/resources/templates/pautasList.html
@@ -1,5 +1,5 @@
 <div class="row">
-  {#if role == 'ADMIN'}<a class="btn btn-primary btn-sm" href="/pautas/new" role="button" up-modal=".modalenabled">Adicionar</a>{/if}
+  {#if role == 'ADMIN'}<a class="btn btn-primary btn-sm modal-form" href="/pautas/new">Adicionar</a>{/if}
   <div class="search-right">
     <form method="GET" name="search" id="search">
        <input type="text" name="filter" class="form-control" id="filter" placeholder="Localizar por Titulo" {#if filtered}value="{filter}"{/if}>
@@ -46,9 +46,9 @@
       {pauta.dtCreated}
     </td>
     <td class="fit">
-      <form action="/pautas/delete/{pauta.id}" method="POST" name="delete-{pauta.id}" up-target=".container">
-        <a class="btn btn-default btn-sm" href="/pautas/view/{pauta.id}/{cpf}" role="button" up-modal=".modalenabled">Votar</a>
-        {#if role == 'ADMIN'}<a class="btn btn-primary btn-sm" href="/pautas/edit/{pauta.id}" role="button" up-modal=".modalenabled">Editar</a>
+      <form action="/pautas/delete/{pauta.id}" method="POST" name="delete-{pauta.id}">
+        <a class="btn btn-default btn-sm modal-view" href="/pautas/view/{pauta.id}/{cpf}" role="button">Votar</a>
+        {#if role == 'ADMIN'}<a class="btn btn-primary btn-sm modal-form" href="/pautas/edit/{pauta.id}" role="button">Editar</a>
         <button type="submit" onClick="location.href='/pautas'" class="btn btn-danger btn-sm">Excluir</button>{/if}
       </form>
     </td>
@@ -56,3 +56,5 @@
   {/for}
   {/if}
 </table>
+
+<script type="text/javascript" src="/assets/js/modal.js"></script>
