--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -1,43 +1,39 @@
-{@app.model.User user}
-{#include base.html} 
-{#contents}
-<div class="modalenabled">
-  <h2>{#if update}Editar Usuário #{user.id}{#else}Adicionar Usuário{/if}</h2>
+<div class="panel">
+  <h3>{#if update}Editar Usuário #{user.id}{#else}Adicionar Usuário{/if}</h3>
+  {#if error}<div class="alert alert-danger">{error}</div>{/if}
+  <div id="msg"></div>
   <div class="panel panel-default">
-    <form action="/users/{#if update}edit/{user.id}{#else}new{/if}" method="POST" name="userForm" onsubmit="reload()" enctype="multipart/form-data">
+    <form method="POST" name="userForm" id="userForm" enctype="multipart/form-data">
       <div class="form-panel">
         <div class="form-group">
             <label class="sr-only" for="name">Nome</label>
-            <input type="text" name="name" class="form-control" id="name" placeholder="Nome" required autofocus {#if update}value="{user.name}"{/if}>
+            <input type="text" name="name" class="form-control" id="name" placeholder="Nome" required="true" autofocus {#if update}value="{user.name}"{/if}>
         </div>
         <div class="form-group">
             <label class="sr-only" for="cpf">CPF</label>
-            <input type="number" name="cpf" class="form-control" id="cpf" placeholder="CPF" required autofocus {#if update}value="{user.cpf}"{/if}>
+            <input type="number" name="cpf" class="form-control" id="cpf" placeholder="CPF" required="true" autofocus {#if update}value="{user.cpf}"{/if}>
         </div>
         <div class="form-group">
             <label class="sr-only" for="email">E-mail</label>
-            <input type="text" name="email" class="form-control" id="email" placeholder="E-mail" required autofocus {#if update}value="{user.email}"{/if}>
+            <input type="text" name="email" class="form-control" id="email" placeholder="E-mail" required="true" autofocus {#if update}value="{user.email}"{/if}>
         </div>
         <div class="form-group">
           <label class="sr-only" for="username">Usuário</label>
-          <input type="text" name="username" class="form-control" id="username" placeholder="Usuário" required autofocus {#if update}value="{user.username}"{/if}>
+          <input type="text" name="username" class="form-control" id="username" placeholder="Usuário" required="true" autofocus {#if update}value="{user.username}"{/if}>
         </div>
         <div class="form-group">
             <label class="sr-only" for="password">Senha</label>
-            <input type="password" name="password" class="form-control" id="password" placeholder="Senha" required autofocus value="">
+            <input type="password" name="password" class="form-control" id="password" placeholder="Senha" required="true" autofocus value="">
         </div>
         <div class="form-group">
 	        <select class="custom-select" name="role" id="role">
-	          <option disabled value="">Role</option>
+	          <option disabled value="">Função</option>
 	          {#for rl in roles}
 	          <option value="{rl}" {#if user.role == rl}selected{/if}>{rl.descricao}</option>
 	          {/for}
 	        </select>
         </div>
-        <button type="submit" class="btn btn-primary">{#if update}Editar{#else}Adicionar{/if}</button>
       </div>
     </form>
   </div>
 </div>
-{/contents}
-{/include}
