Realizado alguns ajustes no envio do voto e também no retorno da mensagem de notificação

--- a/src/main/resources/templates/pautaView.html
+++ b/src/main/resources/templates/pautaView.html
@@ -6,15 +6,15 @@
         <div class="form-group">
             {pauta.descricao}
         </div>
-        <form action="/votacao/votar" method="POST" name="votacaoForm" up-target=".container" enctype="multipart/form-data">
+        <form method="POST" name="votacaoForm" id="votacaoForm" enctype="multipart/form-data">
+	      	<input type="hidden" name="votacao" id="votacao" value="true">
 	      	<input type="hidden" name="idpauta" id="idpauta" value="{pauta.id}">
 	      	<input type="hidden" name="cpf" id="cpf" value="{cpf}">
 	        <div class="form-group">Voto<br>
 	          {#for vt in voto}
-               	<input type="radio" name="voto" value="{vt}">{vt.descricao} 
+               	<input type="radio" name="voto" value="{vt}"> {vt.descricao} 
 			      {/for}
           </div>
-	        <button type="submit" class="btn btn-primary">Votar</button>
         </form>
         <br><br>
         <div class="form-group">Obs: Ao votar, aguarde a validação do CPF para confirmar o voto.</div>
