--- a/src/main/resources/templates/sessaoForm.html
+++ b/src/main/resources/templates/sessaoForm.html
@@ -14,12 +14,12 @@
             <input type="number" name="duracao" class="form-control" id="duracao" placeholder="Duração em Minutos" required="true" autofocus {#if update}value="{sessao.duracao}"{/if}>
         </div>
         <div class="form-group">
-            <label class="sr-only" for="data_inicio_sessao">Data Inicio</label>
-            <input type="date" name="data_inicio_sessao" class="form-control" id="data_inicio_sessao" placeholder="Data Inicio" required="true" autofocus {#if update}value="{sessao.dataInicioSessao}"{/if}>
+            <label class="sr-only" for="dataInicioSessao">Data Inicio</label>
+            <input type="date" name="dataInicioSessao" class="form-control" id="dataInicioSessao" placeholder="Data Inicio" required="true" autofocus {#if update}value="{sessao.dataInicioSessao}"{/if}>
         </div>
         <div class="form-group">
-            <label class="sr-only" for="data_fim_sessao">Data Fim</label>
-            <input type="date" name="data_fim_sessao" class="form-control" id="data_fim_sessao" placeholder="Data Fim" required="true" autofocus {#if update}value="{sessao.dataFimSessao}"{/if}>
+            <label class="sr-only" for="dataFimSessao">Data Fim</label>
+            <input type="date" name="dataFimSessao" class="form-control" id="dataFimSessao" placeholder="Data Fim" required="true" autofocus {#if update}value="{sessao.dataFimSessao}"{/if}>
         </div>
         <div class="form-group">
 	        <select class="custom-select" name="idpauta" id="idpauta" {#if update}disabled{/if}>
